# saliencytools

./: .buildinfo  .gitignore  Makefile  README.md  __init__.py  genindex.html  index.html  installation.html  maskcompare.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  tutorial.ipynb  usage.html
.github/workflows/: sphinx.yml  test.yml
_modules/: index.html
_modules/saliencytools/: maskcompare.html
_static/: custom.css
docs/: conf.py  index.rst  installation.rst  usage.rst
docs/source/: conf.py  index.rst  installation.rst  maskcompare.rst  usage.rst
saliencytools/: maskcompare.py
src/: maskcompare.py
test/: test_metrics.py  test_readme.py
