[project]
name = "saliencytools"
version = "0.33"
authors = [
  { name="Valerio Bonsignori", email="valerio.bonsignori@phd.unipi.it" },
]
description = "A collection of metrics for comparing saliency maps"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/valevalerio/saliencytools"
Issues = "https://github.com/valevalerio/saliencytools/issues"
Documentation = "https://valevalerio.github.io/saliencytools/"